# TibiaPilotNG

./: .gitignore  Cargo.toml  LICENSE  README.md  config.default.json  file.json  main.py  pilotng.spec  pyproject.toml  run_pilotng.bat  run_pilotng.sh
XET-SpecterHID/: README.md  main.py  requirements.txt
XET-SpecterHID/config/: settings.toml
XET-SpecterHID/core/: controller.py
XET-SpecterHID/input/: emulator.py
XET-SpecterHID/obs/: obs_connector.py
XET-SpecterHID/vision/: screen_parser.py
arduino/: arduino.ino  hidmouserptparser.cpp
builders/repositories/radar/: buildFloorsImgs.py  buildWalkableSqms.py
py_rust_utils/: Cargo.toml
py_rust_utils/src/: lib.rs
rust_bot_ng/: Cargo.toml  README.md  TESTING_DIGIT_RECOGNITION.md  config.toml
rust_bot_ng/src/: lib.rs  main.rs  python_utils.rs
rust_bot_ng/src/config/: mod.rs  settings.rs
rust_bot_ng/src/game_logic/: player_monitor.rs
rust_bot_ng/src/game_logic/cavebot/: core.rs  tasks.rs  waypoints.rs
rust_bot_ng/src/image_processing/: matching.rs  mod.rs
rust_bot_ng/src/input/: keyboard.rs  mod.rs
scripts/: draken_walls_north.pilotscript  minocult_menos_dois_refill.skbscript  minocult_menos_um_refill.skbscript  run_random_agent.py  run_visual_agent.py
skb_core/: Cargo.toml  README.md  TESTING_DIGIT_RECOGNITION.md
skb_core/src/: context.rs  lib.rs  main.rs  python_utils.rs
skb_core/src/config/: settings.rs
skb_core/src/game_logic/: context.rs  healer.rs  mod.rs
skb_core/src/game_logic/cavebot/: core.rs  mod.rs  tasks.rs  waypoints.rs
skb_core/src/image_processing/: cache.rs  digit_recognition.rs  hash_utils.rs  matching.rs  mod.rs  templates.rs
skb_core/src/input/: arduino.rs  keyboard.rs  mouse.rs
skb_core/src/screen_capture/: capture.rs  mod.rs
skb_modules/: Cargo.toml
skb_modules/config/: example_settings.ini  gameplay_test_settings.ini  settings.ini
skb_modules/src/: lib.rs
skb_rust_project/skb_action_bar/: Cargo.toml
skb_rust_project/skb_action_bar/src/: error.rs  lib.rs  manager.rs  types.rs
skb_rust_project/skb_config/: Cargo.toml
skb_rust_project/skb_config/src/: error.rs  lib.rs  loader.rs  types.rs
skb_rust_project/skb_game_state/: Cargo.toml
skb_rust_project/skb_game_state/src/: error.rs  lib.rs  types.rs
skb_rust_project/skb_gameplay_logic/: Cargo.toml
skb_rust_project/skb_gameplay_logic/src/: combat.rs  error.rs  healing.rs  lib.rs  manager.rs
skb_rust_project/skb_input/: Cargo.toml
skb_rust_project/skb_input/src/: actions.rs  error.rs  lib.rs
skb_rust_project/skb_utils/: Cargo.toml
skb_rust_project/skb_utils/src/: error.rs  file_ops.rs  lib.rs  logging.rs  timing.rs
skb_workspace/: Cargo.toml
skb_workspace/skb_capture/: Cargo.toml
skb_workspace/skb_capture/src/: lib.rs
skb_workspace/skb_config/: Cargo.toml
skb_workspace/skb_config/src/: lib.rs
skb_workspace/skb_image_proc/: Cargo.toml
skb_workspace/skb_image_proc/src/: lib.rs
skb_workspace/skb_input/: Cargo.toml
skb_workspace/skb_input/src/: lib.rs
skb_workspace/skb_ocr/: Cargo.toml
skb_workspace/skb_ocr/src/: lib.rs
skb_workspace/skb_utils/: Cargo.toml
skb_workspace/skb_utils/src/: lib.rs
src/: error.rs  main.rs
src/ai/: agent_interface.py
src/gameplay/: cavebot.py  combo.py  context.py  resolvers.py  spells.py  targeting.py  typings.py  utils.py
src/gameplay/core/: load.py  waypoint.py
src/gameplay/core/middlewares/: battleList.py  chat.py  gameWindow.py  playerStatus.py  radar.py  screenshot.py  statsBar.py  tasks.py
src/gameplay/core/tasks/: attackClosestCreature.py  attackMonstersBox.py  buyBackpack.py  buyItem.py  clickInClosestCreature.py  clickInCoordinate.py  closeContainer.py  closeNpcTradeBox.py  collectDeadCorpse.py  depositItems.py  depositItemsHouse.py  dragItems.py  dragItemsToFloor.py  dropBackpackIntoStash.py  dropEachFlask.py  dropFlasks.py  enableChat.py  executeSpellSequenceTask.py  expandBackpack.py  goToFreeDepot.py  lootMonstersBox.py  move.py  moveDown.py  moveUp.py  openBackpack.py  openDepot.py  openDoor.py  openDoorWaypoint.py  openLocker.py  orchestrator.py  pauseBot.py  refill.py  refillChecker.py  resetSpellIndex.py  rightClickDirection.py  rightClickDirectionWaypoint.py  rightClickUse.py  rightClickUseWaypoint.py  say.py  sayPlayerAfterBox.py  (+19 more)
src/gameplay/healing/observers/: autoHur.py  clearPoison.py  eatFood.py  healingByMana.py  healingByPotions.py  healingBySpells.py  swapAmulet.py  swapRing.py
src/gameplay/threads/: alert.py  legacy_game_loop.py  pilotNG.py
src/repositories/actionBar/: config.py  core.py
src/repositories/battleList/: config.py  core.py  locators.py
src/repositories/chat/: core.py
src/repositories/gameWindow/: core.py  creatures.py  slot.py
src/repositories/radar/: core.py
src/repositories/refill/: config.py  core.py
src/repositories/skills/: core.py  locators.py
src/repositories/statsBar/: config.py  core.py  locators.py
src/ui/: application.py  context.py  theme.py  utils.py  websocket_client.py
src/ui/pages/: comboModal.py  comboSpellModal.py  comboSpells.py  config.py  inventory.py  settings_page.py
src/ui/pages/cavebot/: baseModal.py  buyBackpackModal.py  cavebotPage.py  depositItemsModal.py  ignoreCreaturesModal.py  ignoreCreaturesPage.py  refillCheckerModal.py  refillModal.py  travelModal.py
src/ui/pages/healing/: foodTab.py  (+13 more)
src/utils/: array.py  color_configs.py  config_manager.py  coordinate.py  core.py  image.py  ino.py  ino_rs.py  keyboard.py  matrix.py  mouse.py  screen_capture.py  script_parser.py  simple_image_analyzer.py
src/wiki/: cities.py  creatures.py
tests/unit/ai/: test_agent_interface.py
tests/unit/utils/: test_core.py  test_image.py  test_keyboard.py  test_mouse.py  test_screen_capture.py  test_simple_image_analyzer.py
xet_specter_rs/: .gitignore  Cargo.toml  README.md
xet_specter_rs/frontend_logic/: .gitignore  Cargo.toml
xet_specter_rs/frontend_logic/src/: lib.rs
xet_specter_rs/server/: Cargo.toml
xet_specter_rs/server/src/: main.rs
xet_specter_ui/: README.md  index.html  package.json  style.css  tsconfig.json
xet_specter_ui/src/: main.ts
(+19 files in other folders)
