[workspace]
members = [
    "skb_modules",
    "skb_rust_project/skb_config",
    "skb_rust_project/skb_utils",
    "skb_rust_project/skb_input",
    "skb_rust_project/skb_game_state",
    "skb_rust_project/skb_gameplay_logic",
    "skb_rust_project/skb_action_bar"
]
resolver = "2"

[package]
name = "skb"
version = "0.1.0"
edition = "2021"

[dependencies]
skb_config = { path = "skb_rust_project/skb_config", version = "0.1.0" }
skb_utils = { path = "skb_rust_project/skb_utils", version = "0.1.0" }
log = "0.4"
env_logger = "0.10"
