[package]
name = "py_rust_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "py_rust_utils" # This will be the name of the .so/.dll file
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.0", features = ["extension-module", "auto-initialize"] }
numpy = "0.21.0"
farmhash = "1.1.1"
