[package]
name = "skb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "skb_py_utils" # Name of the python module
crate-type = ["cdylib"]

[[bin]]
name = "skb_bin" # Name of the binary executable
path = "src/main.rs"

[dependencies]
thiserror = "1.0"
log = "0.4"
env_logger = "0.9"
serialport = "4.2"
base64 = "0.13"
screenshots = "0.5" # For screen capture
image = "0.23.14"      # For image manipulation - Pinned to older version
opencv = { version = "0.70.0", features = ["imgproc", "highgui"] } # For image processing, Pinned to older version
serde = { version = "1.0", features = ["derive"] } # For serialization/deserialization
toml = "0.8" # For TOML parsing
pyo3 = { version = "0.21.0", features = ["extension-module"] }
once_cell = "1.19" # For global static instance
farmhash = "1.1" # For hashing image data

[dev-dependencies]
tempfile = "3"
