# skb_game_state/Cargo.toml
[package]
name = "skb_game_state"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
# parking_lot = { version = "0.12", optional = true } # For potential concurrent access later
# serde = { version = "1.0", features = ["derive"], optional = true } # For serialization later
