[package]
name = "skb_image_proc"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.24"
imageproc = "0.23"
thiserror = "1.0"
log = "0.4"
# For tests, env_logger is useful
env_logger = { version = "0.10", optional = true }
# Optional dependencies, can be uncommented when functions are implemented
# image-hasher = "1.1" # For compute_hash
# rayon = "1.8"      # For parallelizing find_pattern or other ops
