[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0.0", features = ["full"] } 
tokio-tungstenite = "0.13.0"
tungstenite = "=0.12.0"    # Pin exact version
url = "=2.1.1"             # Pin exact version
idna = "=0.2.0"            # Pin exact version
native-tls = "=0.2.11"     # Pin exact version for MSRV compatibility
futures-util = "0.3.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
